Fix form color contrast error

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -238,7 +238,6 @@ p {
 }
 
 .contact-me textarea {
-  color: #b3bac5;
   height: 140px;
   margin-bottom: -5px;
 }
